FIX: Hamburger icon was too big

--- a/frontend-html/src/gui/connections/MobileComponents/MenuButton.module.scss
+++ b/frontend-html/src/gui/connections/MobileComponents/MenuButton.module.scss
@@ -25,7 +25,7 @@ along with ORIGAM. If not, see <http://www.gnu.org/licenses/>.
   left: 32px;
 }
 
-.menuIcon{
+svg.menuIcon{
   height: 50px;
   width: 50px;
   margin-left: 5px;
